# scvi_neural_ode

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
src/scvi_neural_ode/: __init__.py  _constants.py
src/scvi_neural_ode/data/: __init__.py  _anndata.py  _anndataset.py  _data_modules.py  _datasets.py  _loaders.py  _sampler.py
src/scvi_neural_ode/distributions/: __init__.py  _negative_binomial.py
src/scvi_neural_ode/models/: __init__.py  branch_condodescvi.py  condodescvi.py  odescvi.py  scvi.py
src/scvi_neural_ode/models/base/: __init__.py  _posterior_utils.py  _utils.py  base_model.py  differentialmixin.py  log_likelihood.py  rnamixin.py  trainingmixin.py  vaemixin.py
src/scvi_neural_ode/modules/: __init__.py  _base.py  branch_odecvae.py  odecvae.py  odevae.py  utils.py  vae.py
src/scvi_neural_ode/nn/: __init__.py  base.py  classifier.py  ode.py  utils.py
src/scvi_neural_ode/train/: __init__.py  trainer.py  trainingplan.py
src/scvi_neural_ode/utils/: ode.py  plotting.py  utils.py
tests/: conftest.py
tests/test_data/: conftest.py  test_anndata.py  test_built_in_data.py  test_loaders.py
tests/test_distributions/: test_NB.py
tests/test_models/: test_odescvi.py  test_scvi.py
